--- a/CAN/FED/DND.html
+++ b/CAN/FED/DND.html
@@ -37,11 +37,11 @@
 			<a href="DND/Army.html"><img src="DND/ARMY.png" height="200"><br>Canadian Army<br>Armée canadienne</a></br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="DND/RCN.html"> --><img src="DND/NAVY.png" height="200"><br>Royal Canadian Navy<br>Marine royale canadienne</a></br>
 		</div>	
 				
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="DND/RCAF.html"> --><img src="DND/RCAF.png" height="200"><br>Royal Canadian Air Force<br>Aviation royale canadienne</a></br>
 		</div>		
 	</div>
