--- a/CAN/Provinces/AB/Edmonton.html
+++ b/CAN/Provinces/AB/Edmonton.html
@@ -11,11 +11,11 @@
 
 	<div class="row">
 		 
-		 <div class="columng">
+		 <div class="column">
 			<!-- <a href="YEG/EPS/"> --><img src="YEG/EPS/BADGE.png" height="200"><br>Edmonton Police Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="YEG/EFR/"> --><img src="YEG/EFR/BADGE.png" height="200"><br>Edmonton Fire Rescue</a><br><br>
 		</div>
 	</div>
