--- a/CAN/Provinces/NL.html
+++ b/CAN/Provinces/NL.html
@@ -25,7 +25,7 @@
 		 <div class="column">
 			<a href="NL/RNC.html"><img src="NL/RNC/BADGE.png" height="200"><br>Royal Newfoundland Constabulary</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!--<a href="NL/Sheriff">--><img src="NL/Sheriff/BADGE.png" height="200"><br>Newfoundland Sheriff</a><br><br>
 		</div>
 	</div>
