--- a/CAN/Provinces/x/AB.html
+++ b/CAN/Provinces/x/AB.html
@@ -30,11 +30,11 @@
 			<a href="AB/AHS.html"><img src="AB/AHS/BADGE2.png" height="200"><br>Alberta Health Services</a><br><br>
 		</div>
 		
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="AB/ENV/Conservation"> --><img src="AB/ENV/Conservation/BADGE.png" height="200"><br>Alberta Conservation</a><br><br>
 		</div>
 		
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="AB/ENV/Wildlife"> --><img src="AB/ENV/Wildlife/BADGE.png" height="200"><br>Alberta Fish & Wildlife</a><br><br>
 		</div>
 	
