--- a/ROW/AUS/QLD.html
+++ b/ROW/AUS/QLD.html
@@ -14,11 +14,11 @@
 			<a href="QLD/Police.html"><img src="QLD/Police/BADGE.png" height="250"><br>Queensland Police Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="QLD/fire.html"> --><img src="QLD/Fire/BADGE.png" height="250"><br>Queensland Fire & Emergency Services</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="QLD/ambo.html"> --><img src="QLD/Ambo/BADGE.png" height="250"><br>Queensland Police Service</a><br><br>
 		</div>
 		
