--- a/ROW/AUS/SA.html
+++ b/ROW/AUS/SA.html
@@ -14,11 +14,11 @@
 			<a href="SA/Police.html"><img src="SA/Police/BADGE.png" height="250"><br>South Australia Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SA/fire.html"> --><img src="SA/Fire/BADGE.png" height="250"><br>South Australia Metropolitan Fire Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SA/ambo.html"> --><img src="SA/Ambo/BADGE.png" height="250"><br>South Australia Ambulance Service</a><br><br>
 		</div>
 		
