--- a/ROW/AUS/TAS.html
+++ b/ROW/AUS/TAS.html
@@ -14,11 +14,11 @@
 			<a href="TAS/Police.html"><img src="TAS/Police/BADGE.png" height="250"><br>Tasmania Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="TAS/fire.html"> --><img src="TAS/Fire/BADGE.png" height="250"><br>Tasmania Fire Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="TAS/ambo.html"> --><img src="TAS/Ambo/BADGE.png" height="250"><br>Tasmania Ambulance Service</a><br><br>
 		</div>
 		
