--- a/ROW/AUS/VIC.html
+++ b/ROW/AUS/VIC.html
@@ -14,11 +14,11 @@
 			<a href="VIC/Police.html"><img src="VIC/Police/BADGE.png" height="250"><br>Victoria Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="VIC/fire.html"> --><img src="VIC/fire/BADGE.png" height="250"><br>Fire Rescue Victoria</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="VIC/ambo.html"> --><img src="VIC/ambo/BADGE.png" height="250"><br>Victoria Ambulance</a><br><br>
 		</div>
 		
