--- a/ROW/AUS/WA.html
+++ b/ROW/AUS/WA.html
@@ -14,11 +14,11 @@
 			<a href="WA/police.html"><img src="WA/Police/BADGE.png" height="250"><br>Western Australia Police Force</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="WA/fire.html"> --><img src="WA/Fire/BADGE.png" height="250"><br>Western Australia Fire & Rescue</a><br><br> -->
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="WA/ambo.html"> --><img src="SJABADGE.png" height="250"><br>St John Ambulance Western Australia</a><br><br>
 		</div>
 		
