--- a/ROW/NZ.html
+++ b/ROW/NZ.html
@@ -11,7 +11,7 @@
 	<h3><i>Aotearoa</i></h3>
 
 	<div class="row">
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NZ"> --><img src="NZ/BADGE.png" height="300"><br>New Zealand Police</br><i>Ngā Pirihimana o Aotearoa</i></a><br><br>
 		</div>
 	</div>
