--- a/ROW/UK/ENG/SW.html
+++ b/ROW/UK/ENG/SW.html
@@ -9,19 +9,19 @@
     <h1><img src="SW/FLAG.png" width="200"></h1><h2>South West England</h2>
 
 	<div class="row">
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SW/Avon + Sommerset""> --><img src="SW/Avon + Sommerset/BADGE.png" height="200"><br>Avon + Sommerset Constabulary</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SW/Devon + Cornwall/Police""> --><img src="SW/Devon + Cornwall/Police/BADGE.png" height="200"><br>Devon + Cornwall Police</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SW/Dorset""> --><img src="SW/Dorset/BADGE.png" height="200"><br>Dorset Police</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SW/Gloucestershire""> --><img src="SW/Gloucestershire/BADGE.png" height="200"><br>Gloucestershire Constabulary</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SW/Wiltshire""> --><img src="SW/Wiltshire/BADGE.png" height="200"><br>Wiltshire Police</a><br><br>
 		</div>
 	</div>
