--- a/ROW/UK/ENG/WM.html
+++ b/ROW/UK/ENG/WM.html
@@ -9,16 +9,16 @@
     <h1><img src="WM/FLAG.png" width="200"></h1><h2>West Midlands</h2>
 
 	<div class="row">
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="WM/Staffordshire""> --><img src="WM/Staffordshire/BADGE.png" height="200"><br>Staffordshire Police</a><br><br>
 		</div>
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="WM/Warwickshire""> --><img src="WM/Warwickshire/BADGE0.png" height="200"><br>Warwickshire Police</a><br><br>
 		</div>
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="WM/West Mercia""> --><img src="WM/West Mercia/BADGE.png" height="200"><br>West Mercia Police</a><br><br>
 		</div>
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="WM/West Midlands""> --><img src="WM/West Midlands/BADGE.png" height="200"><br>West Midlands Police</a><br><br>
 		</div>
 	</div>
