--- a/ROW/UK/ENG/Y+H.html
+++ b/ROW/UK/ENG/Y+H.html
@@ -14,30 +14,30 @@
 		</div>
 	</div>
 		<div class="row">
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/WYork""> --><img src="Y+H/WYork/BADGE.png" height="200"><br>West Yorkshire Police</a><br><br>
 			</div>
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/NYork/Police""> --><img src="Y+H/NYork/Police/BADGE.png" height="200"><br>North Yorkshire Police</a><br><br>
 			</div>
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/SYork""> --><img src="Y+H/SYork/BADGE.png" height="200"><br>South Yorkshire Police</a><br><br>
 			</div>
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/Humberside/Police""> --><img src="Y+H/Humberside/Police/BADGE.png" height="200"><br>Humberside Police</a><br><br>
 			</div>
 		</div>
 		<div class="row">			
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/WYork/Fire""> --><img src="Y+H/WYork/FBADGE.png" height="200"><br>West Yorkshire Fire & Resuce Service</a><br><br>
 			</div>
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/NYork/Fire""> --><img src="Y+H/NYork/Fire/BADGE.png" height="200"><br>North Yorkshire Fire & Resuce Service</a><br><br>
 			</div>
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/SYork/Fire""> --><img src="Y+H/SYork/FBADGE.png" height="200"><br>South Yorkshire Fire & Resuce Service</a><br><br>
 			</div>
-			<div class="column4g">
+			<div class="column4">
 				<!-- <a href="Y+H/Humberside/Fire""> --><img src="Y+H/Humberside/Fire/BADGE.png" height="200"><br>Humberside Fire & Resuce Service</a><br><br>
 			</div>
 		</div>
