--- a/USA/State/CA/SanFran.html
+++ b/USA/State/CA/SanFran.html
@@ -15,11 +15,11 @@
 			<a href="SanFran/SFPD.html"><img src="SanFran/SFPD/BADGE2.png" height="300"><br>San Francisco Police Department</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SanFran/Sheriff.html"> --><img src="SanFran/Sheriff/BADGE.png" height="300"><br>San Francisco Sheriff's Department</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SanFran/SFFD.html"> --><img src="SanFran/SFFD/BADGE.png" height="300"><br>San Francisco Fire Department</a><br><br>
 		</div>
 	</div>
