--- a/USA/State/DC.html
+++ b/USA/State/DC.html
@@ -26,7 +26,7 @@
 			<a href="DC/Metro.html"><img src="DC/MP/BADGE.png" height="300"><br>Metropolitan Police Department<br>of the District of Columbia</a><br><br>
 		</div>
 		 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="DC/Fire"> --><img src="DC/Fire/BADGE.png" height="300"><br>District of Columbia Fire<br>and EMS Department</a><br><br>
 		</div>
 		
