--- a/USA/State/ND.html
+++ b/USA/State/ND.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/NDHP.html"><img src="!Trooper/NDHP/!BADGE.png" height="300"><br>North Dakota Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="ND/Game.html"> --><img src="ND/WBADGE.png" height="300"><br>North Dakota Highway Patrol</a><br><br>
 		</div>
 		
