--- a/USA/State/NH.html
+++ b/USA/State/NH.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/NHSP.html"><img src="!Trooper/NHSP/!BADGE.png" height="200"><br>New Hampshire State Police</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="NH/Game.html"> --><img src="NH/WBADGE.png" height="200"><br>New Hampshire State Police</a><br><br>
 		</div>
 		
