--- a/USA/State/NJ.html
+++ b/USA/State/NJ.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/NJSP.html"><img src="!Trooper/NJSP/!BADGE.png" height="300"><br>New Jersey State Police</a><br><br>
 		</div>
 	
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NJ/Game.html"> --><img src="NJ/WBADGE.png" height="300"><br>New Jersey State Police</a><br><br>
 		</div>
 	
