--- a/USA/State/SC.html
+++ b/USA/State/SC.html
@@ -26,11 +26,11 @@
 			<a href="!Trooper/SCHP.html"><img src="!Trooper/SCHP/!BADGE.png" height="300"><br>South Carolina Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SC/CVE.html"> --><img src="SC/TBADGE.png" height="300"><br>South Carolina State Transport Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="SC/Game.html"> --><img src="SC/WBADGE.png" height="300"><br>South Carolina Department of Natural Resources</a><br><br>
 		</div>
 		
