--- a/USA/State/SD.html
+++ b/USA/State/SD.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/SDHP.html"><img src="!Trooper/SDHP/!BADGE.png" height="300"><br>South Dakota Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="SD/Game.html"> --><img src="SD/WBADGE.png" height="300"><br>South Dakota<br>Game, Fish & Parks</a><br>
 		</div>
 		
