--- a/USA/State/TX.html
+++ b/USA/State/TX.html
@@ -26,19 +26,19 @@
 			<a href="!Trooper/TXDPS.html"><img src="!Trooper/TXDPS/!BADGE.png" height="250"><br>Texas DPS Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="TX/Game.html"> --><img src="TX/Texas Game Warden/BADGE.png" height="250"><br>Texas DPS Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="TX/Game.html"> --><img src="TX/Dallas/BADGE2.png" height="250"><br>Dallas Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="TX/Game.html"> --><img src="TX/Houston/BADGE1.png" height="250"><br>Houston Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="TX/Game.html"> --><img src="TX/FW/BADGE.png" height="250"><br>Fort Worth Police</a><br><br>
 		</div>
 		
