--- a/USA/State/WA.html
+++ b/USA/State/WA.html
@@ -26,15 +26,15 @@
 			<a href="!Trooper/WASP.html"><img src="!Trooper/WASP/!BADGE.png" height="300"><br>Washington State Police</a><br><br>
 		</div>
 
-		<!-- <div class="columng">
+		<!-- <div class="column">
 			<a href="WA/Park.html"><img src="WA/ParkBADGE.png" height="300"><br>Washington State Park Police</a><br><br>
 		</div> -->
 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="WA/Nature.html"> --><img src="WA/NBADGE.png" height="300"><br>Washington Natural resources Police</a><br><br>
 		</div>
 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="WA/Game.html"> --><img src="WA/WBADGE.png" height="300"><br>Washington Fish & Wildlife Police</a><br><br>
 		</div>
 
