--- a/USA/State/WI.html
+++ b/USA/State/WI.html
@@ -26,11 +26,11 @@
 			<a href="!Trooper/WISP.html"><img src="!Trooper/WISP/!BADGE.png" height="300"><br>Wisconsin State Patrol</a><br><br>
 		</div>
 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="WI/Park.html"> --><img src="WI/ParkBADGE.png" height="300"><br>Wisconsin State Fair Park Police</a><br><br>
 		</div>
 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="WI/Game.html"> --><img src="WI/WBADGE.png" height="300"><br>Wisconsin Department of Natural Resources<br>Conservation Warden</a><br>
 		</div>
 
