--- a/USA/Transit/Air.html
+++ b/USA/Transit/Air.html
@@ -28,10 +28,10 @@
 		<div class="column4">
 			<a href="Air/LAX.html"><img src="Air/CA/LAX/BADGE.png" height="200"><br>Los Angeles World Airports</br></a><br><br>
 		</div>
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="Air/DEN"> --><img src="Air/DEN/BADGE.png" height="200"><br>Denver International Airport Fire Department</br></a><br><br>
 		</div>
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="Air/ORD/Fire"> --><img src="../State/IL/Chicago/CFD/BADGE.png" height="200"><br>Chicago Fire Department</br>O'Hare Squad</a><br><br>
 		</div>
 	</div>
