--- a/CAN/Provinces/NS.html
+++ b/CAN/Provinces/NS.html
@@ -22,7 +22,7 @@
 
 	<div class="row">
 		 
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="NS/Sheriff"> --><img src="NS/Sheriff/BADGE.png" height="200"><br>Nova Scotia Sheriff</a><br><br>
 		</div>
 	
