--- a/CAN/Provinces/SK.html
+++ b/CAN/Provinces/SK.html
@@ -22,7 +22,7 @@
 
 	<div class="row">
 		 
-		 <div class="columng">
+		 <div class="column">
 			<!-- <a href="SK/SHP"> --><img src="SK/SHP/BADGE.png" height="200"><br>Saskatchewan Highway Patrol</a><br><br>
 		</div>
 	</div>
