--- a/CAN/Provinces/x/xON.html
+++ b/CAN/Provinces/x/xON.html
@@ -30,7 +30,7 @@
 			<a href="ON/MTO.html"><img src="ON/MTO/BADGE.png" height="250"><br>Ontario Ministry of Transport</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="ENV/MNR"> --><img src="ON/ENV/MNR/BADGE.png" height="250"><br>Ontario Ministry of Natural Resources</a><br><br>
 		</div>
 		 
@@ -56,18 +56,18 @@
 	</div>
 	<div class="row">
 	
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="ON/Hamilton"> --><img src="ON/Hamilton/LOGO.png" height="200"><br>Hamilton</a><br><br>
 		</div>
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="ON/Simcoe"> --><img src="ON/Simcoe/FLAG.png" height="200"><br>County of Simcoe</a><br><br>
 		</div>		
 		
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="ON/Simcoe/Barrie"> --><img src="ON/Simcoe/Barrie/FLAG.png" height="200"><br>Barrie</a><br><br>
 		</div>		
 
-		<div class="column4g">
+		<div class="column4">
 			<!-- <a href="ON/Durham"> --><img src="ON/Durham/LOGO.png" height="200"><br>Durham Regional Police</a><br><br>
 		</div>
 	
