--- a/CAN/Transport/Transit.html
+++ b/CAN/Transport/Transit.html
@@ -11,8 +11,8 @@
 
 	<div class="row">
 		 
-		<div class="columng">
-			<!-- <a href="Transit/YVR"> --><img src="Transit/YVR/BADGE.png" height="200"><br>Metro Vancouver Transit Police</a><br><br>
+		<div class="column">
+			<img src="Transit/YVR/BADGE.png" height="200"><br>Metro Vancouver Transit Police<br><br>
 		</div>
 		<div class="column">
 			<a href="Transit/GOT.html"><img src="Transit/GOT/BADGE.png" height="200"><br>GO Transit Transit Safety</a><br><br>
@@ -20,11 +20,14 @@
 		<div class="column">
 			<a href="Transit/TTC.html"><img src="Transit/TTC/BADGE.png" height="200"><br>TTC Transit Enforcement Unit</a><br><br>
 		</div>
-		<div class="columng">
-			<!-- <a href="Transit/OC"> --><img src="Transit/OC/BADGE.png" height="200"><br>OC Transpo Special Constables</a><br><br>
+		<div class="column">
+			<img src="Transit/OC/BADGE.png" height="200"><br>OC Transpo Special Constables<br><br>
 		</div>
 		<div class="column">
 			<a href="Transit/CT.html"><img src="Transit/CT/BADGE.png" height="200"><br>Calgary Transit Protective Services</a><br><br>
+		</div>
+		<div class="column">
+			<img src="Transit/ET/BADGE.png" height="200"><br>Edmonton Transit Protective Services<br><br>
 		</div>
 	</div>
 	
