--- a/ROW/AUS/NSW.html
+++ b/ROW/AUS/NSW.html
@@ -14,11 +14,11 @@
 			<a href="NSW/Police.html"><img src="NSW/Police/BADGE.png" height="250"><br>New South Wales Police Force</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NSW/Fire.html" --><img src="NSW/Fire/BADGE.png" height="250"><br>Fire & Rescue New South Wales</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NSW/ambo.html"> --><img src="NSW/ambo/BADGE.png" height="250"><br>New South Wales Ambulance</a><br><br>
 		</div>
 		
