--- a/ROW/AUS/NT.html
+++ b/ROW/AUS/NT.html
@@ -13,11 +13,11 @@
 			<a href="NT/Police.html"><img src="NT/Police/BADGE.png" height="250"><br>Northern Territory Police Force</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NT/fire.html"> --><img src="NT/Fire/BADGE.png" height="250"><br>Northern Territory Fire & Rescue Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NT/ambo.html"> --><img src="SJABADGE.png" height="250"><br>St John Ambulance Northern Territory</a><br><br>
 		</div>
 		
