--- a/ROW/RU.html
+++ b/ROW/RU.html
@@ -11,7 +11,7 @@
 	
 	<div class="row">
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="RU/Police"> --><img src="RU/Police/BADGE.png" height="300"><br>Полиция России</br><i>(Police of Russia)</i></a><br><br>
 		</div>
 		
