--- a/ROW/ZA.html
+++ b/ROW/ZA.html
@@ -23,11 +23,11 @@
 	
 	<div class="row">
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="ZA/SAPS"> --> <img src="ZA/SAPS/BADGE.png" height="300"><br>South African Police Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="ZA/Metro"> --> <img src="ZA/Metro/BADGE.png" height="300"><br>Metro Police</a><br><br>
 		</div>
 		
