--- a/USA/State/OH.html
+++ b/USA/State/OH.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/OSHP.html"><img src="!Trooper/OSHP/!BADGE.png" height="300"><br>Ohio State Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="OH/Game.html"> --><img src="OH/WBADGE.png" height="300"><br>Ohio State Highway Patrol</a><br><br>
 		</div>
 		
