--- a/USA/State/OK.html
+++ b/USA/State/OK.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/OKHP.html"><img src="!Trooper/OKHP/!BADGE.png" height="300"><br>Oklahoma Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<a href="/OKHP.html"><img src="OK/WBADGE.png" height="300"><br>Oklahoma Highway Patrol</a><br><br>
 		</div>
 		
