--- a/USA/State/PA.html
+++ b/USA/State/PA.html
@@ -28,11 +28,11 @@
 			<a href="!Trooper/PSP.html"><img src="!Trooper/PSP/!BADGE.png" height="200"><br>Pennsylvania State Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<img src="PA/WBADGE.png" height="200"><br>Pennsylvania Game Commission</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<img src="PA/NBADGE.png" height="200"><br>Pennsylvania Department of<br>Conservation and Natural Resources</a><br>
 		</div>
 		
