--- a/USA/Transit/Port.html
+++ b/USA/Transit/Port.html
@@ -11,7 +11,7 @@
 
 	<div class="row">
 		 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="PORT/LAPP"> --><img src="PORT/LAPP/BADGE.png" height="200"><br>Los Ageles Port Police</br></a><br><br>
 		</div>
 		<div class="column">
