--- a/CAN/Provinces/NB.html
+++ b/CAN/Provinces/NB.html
@@ -22,7 +22,7 @@
 
 	<div class="row">
 		 
-		 <div class="column2g">
+		 <div class="column2">
 			<!-- <a href="NB/DNR"> --><img src="NB/DNR/BADGE.png" height="200"><br>Department of Natural Resources and Energy Development</br>Le Bureau du Ressources naturelles et Développement de l’énergie</a><br><br>
 		</div>
 	</div>
