--- a/CAN/Provinces/x/BC.html
+++ b/CAN/Provinces/x/BC.html
@@ -25,11 +25,11 @@
 			<a href="BC/BCSS.html"><img src="BC/Sheriff/BCSS.ico" height="300"><br>British Columbia Sheriffs Service</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="BC/BCAS"> --><img src="BC/BCAS/BADGE.png" height="300"><br>British Columbia Ambulance Services</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="BC/Conservation"> --><img src="BC/Conservation/BADGE.PNG" height="300"><br>British Columbia Conservation Officer Service</a><br><br>
 		</div>
 	
@@ -42,7 +42,7 @@
 		</div>		
 	
 		 
-		 <div class="columng">
+		 <div class="column">
 			<!-- <a href="BC/Delta"> --><img src="BC/Delta/DBADGE.png" height="300"><br>Delta Police Department</a><br><br>
 		</div>	
 	</div>
