--- a/ROW/AUS/ACT.html
+++ b/ROW/AUS/ACT.html
@@ -14,11 +14,11 @@
 			<a href="ACT/Police.html"><img src="ACT/AFP/BADGE.png" height="250"><br>Australian Federal Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="ACT/fire.html"> --><img src="ACT/Fire/BADGE.png" height="250"><br>ACT Fire & Rescue</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="ACT/ambo.html"> --><img src="ACT/ambo/BADGE.png" height="250"><br>ACT Ambulance Service</a><br><br>
 		</div>
 		
