--- a/ROW/CN.html
+++ b/ROW/CN.html
@@ -25,7 +25,7 @@
 
 
 		<div class="row">
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="CN/MPS"> --><img src="CN/MPS/BADGE.png" height="300"><br>Chinese Ministry of Public Security (GongAn)</a><br><br>
 			</div>
 			<!-- <div class="column"> -->
