--- a/ROW/EU/DE.html
+++ b/ROW/EU/DE.html
@@ -9,11 +9,11 @@
     <h1><img src="DE/ARMS.png" height="175"></h1><h2>Bundesrepublik Deutschland</br><i>(Federal Republic of Germany)</i></h2>
 	
 	<div class="row">
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="DE/BP"> --><img src="DE/BP/BADGE.png" height="300"><br>Bundespolizei</br><i>(Federal Police)</i></a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="DE/BW"> --><img src="DE/BW/BADGE.png" height="300"><br>Bayerische Staatliche Polizei</br><i>(Bavarian State Police)</i></a><br><br>
 		</div>
 	</div>
