--- a/ROW/EU/IT.html
+++ b/ROW/EU/IT.html
@@ -9,10 +9,10 @@
     <h1><img src="IT/ARMS.png" height="175"></h1><h2>Repubblica Italiana</br><i>Italian Republic</i></h2>
 	
 	<div class="row">
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="IT/Carabinieri/"> --><img src="IT/Carabinieri/BADGE.png" height="300"><br>Arma dei Carabinieri</br></a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="IT/Polizia"> --><img src="IT/Polizia/BADGE.png" height="300"><br>Polizia di Stato</br><i>(State Police)</i></a><br><br>
 		</div>
 	</div>
