--- a/ROW/UK/ENG/EM.html
+++ b/ROW/UK/ENG/EM.html
@@ -9,22 +9,22 @@
     <h1><img src="EM/FLAG.png" width="200"></h1><h2>East Midlands</h2>
 
 	<div class="row">
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="EM/Leicestershire/Police""> --><img src="EM/Leicestershire/Police/BADGE.png" height="200"><br>Leicestershire Police</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="EM/Leicestershire/Fire""> --><img src="EM/Leicestershire/Fire/BADGE.png" height="200"><br>Leicestershire Fire</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="EM/Derbyshire""> --><img src="EM/Derbyshire/BADGE.png" height="200"><br>Derbyshire Constabulary</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="EM/Lincolnshire""> --><img src="EM/Lincolnshire/BADGE.png" height="200"><br>Lincolnshire Police</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="EM/Northamptonshire""> --><img src="EM/Northamptonshire/BADGE.png" height="200"><br>Northamptonshire Police</a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="EM/Nottinghamshire""> --><img src="EM/Nottinghamshire/BADGE.png" height="200"><br>Nottinghamshire Police</a><br><br>
 		</div>
 	</div>
