--- a/ROW/UK/ENG/East.html
+++ b/ROW/UK/ENG/East.html
@@ -9,22 +9,22 @@
     <h1><img src="East/FLAG.png" width="200"></h1><h2>East of England</h2>
 
 	<div class="row">
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="East/Essex""> --><img src="East/Essex/BADGE.png" height="200"><br>Essex Police</a><br><br>
 			</div>
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="East/Norfolk""> --><img src="East/Norfolk/BADGE.png" height="200"><br>Norfolk Police</a><br><br>
 			</div>
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="East/Suffolk""> --><img src="East/Suffolk/BADGE.png" height="200"><br>Suffolk Police</a><br><br>
 			</div>
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="East/Bedfordshire""> --><img src="East/Bedfordshire/BADGE.png" height="200"><br>Bedfordshire Police</a><br><br>
 			</div>
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="East/Hertfordshire""> --><img src="East/Hertfordshire/BADGE.png" height="200"><br>Hertfordshire Constabulary</a><br><br>
 			</div>
-			<div class="columng">
+			<div class="column">
 				<!-- <a href="East/Cambridgeshire""> --><img src="East/Cambridgeshire/BADGE.png" height="200"><br>Cambridgeshire Police</a><br><br>
 			</div>
 		</div>
