--- a/USA/State/FL/Flagler.html
+++ b/USA/State/FL/Flagler.html
@@ -11,7 +11,7 @@
 
 	<div class="row">
 	
-		<div class="column2g">
+		<div class="column2">
 			<a href="Flalger/Police.html"><img src="Flagler/BADGE.png" height="300"><br>Flalger County Sheriff's Office</a><br><br>
 		</div>
 		
