--- a/USA/State/FL/Miami.html
+++ b/USA/State/FL/Miami.html
@@ -27,11 +27,11 @@
 			<a href="Miami/DFire.html"><img src="Miami/DFire/BADGE.png" height="300"><br>Miami-Dade Fire Rescue</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="Miami/CFire.html"> --><img src="Miami/CFire/BADGE.png" height="300"><br>City of Miami Fire Rescue</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<img src="Miami/Beach/Fire.png" height="300"><br>Miami Beach Fire</a><br><br>
 		</div>
 		
