--- a/USA/State/IN.html
+++ b/USA/State/IN.html
@@ -27,7 +27,7 @@
 			<a href="!Trooper/INSP.html"><img src="!Trooper/INSP/!BADGE.png" height="300"><br>Indiana State Police</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="IN/Game.html"> --><img src="IN/DNR/BADGE.png" height="300"><br>Indiana State Police</a><br><br>
 		</div>
 		
