--- a/USA/State/MA.html
+++ b/USA/State/MA.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/MASP.html"><img src="!Trooper/MASP/!BADGE.jpg" height="300"><br>Massachusetts State Police</a><br><br>
 		</div>
 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="MA/Game.html"> --><img src="MA/WBADGE.png" height="300"><br>Massachusetts State Police</a><br><br>
 		</div>
 
