--- a/USA/State/MA/Boston.html
+++ b/USA/State/MA/Boston.html
@@ -14,7 +14,7 @@
 			<a href="Boston/Police.html"><img src="Boston/Police/BADGE.png" height="300"><br>Boston Police</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="Boston/Fire.html"> --><img src="Boston/Fire/BADGE.png" height="300"><br>Boston Fire</a><br><br>
 		</div>
 		
