--- a/USA/State/MI.html
+++ b/USA/State/MI.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/MISP.html"><img src="!Trooper/MISP/!BADGE.png" height="300"><br>Michigan State Police</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="MI/Game.html"> --><img src="MI/WBADGE.png" height="300"><br>Michigan State Police</a><br><br>
 		</div>
 		
