--- a/USA/State/MT.html
+++ b/USA/State/MT.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/MTHP.html"><img src="!Trooper/MTHP/!BADGE.png" height="300"><br>Montana Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="MT/Game.html"> --><img src="MT/WBADGE.png" height="300"><br>Montana Highway Patrol</a><br><br> 
 		</div>
 		
