--- a/ROW/EU/FR.html
+++ b/ROW/EU/FR.html
@@ -9,10 +9,10 @@
     <h1><img src="FR/ARMS.png" height="175"></h1><h2>République française</br><i>French Republic</i></h2>
 	
 	<div class="row">
-		<div class="columng">
+		<div class="column">
 			<a href="FR/PN"><img src="FR/PN/BADGE.png" width="350"><br>Police nationale</br><i>(National Police)</i></a><br><br>
 		</div>
-		<div class="columng">
+		<div class="column">
 			<a href="FR/GN"><img src="FR/GN/BADGE.png" width="350"><br>Gendarmerie nationale</br><i>(National Militia)</i></a><br><br>
 		</div>
 	</div>
