--- a/USA/State/FL/Broward.html
+++ b/USA/State/FL/Broward.html
@@ -14,7 +14,7 @@
 			<a href="Broward/Sheriff.html"><img src="Broward/Sheriff/BADGE.png" height="300"><br>Broward County Sheriff's Office</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="Broward/Fire.html"> --><img src="Broward/Fire/BADGE.png" height="300"><br>Broward County Sheriff Fire Rescue</a><br><br>
 		</div>
 		
