--- a/USA/State/FL/Marion.html
+++ b/USA/State/FL/Marion.html
@@ -11,7 +11,7 @@
 
 	<div class="row">
 	
-		<div class="column2g">
+		<div class="column2">
 			<a href="Marion/Police.html"><img src="Marion/BADGE.png" height="300"><br>Marion County Sheriff's Office</a><br><br>
 		</div>
 		
