--- a/USA/State/IL/Chicago.html
+++ b/USA/State/IL/Chicago.html
@@ -10,11 +10,11 @@
 
 	<div class="row">
 	
-		<div class="column2g">
+		<div class="column2">
 			<img src="Cook/Chicago/CPD/BADGE.png" height="300"><br>Chicago Police Department<br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<img src="Cook/Chicago/CFD/BADGE.png" height="300"><br>Chicago Fire Department<br><br>
 		</div>
 		
