--- a/USA/State/KY.html
+++ b/USA/State/KY.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/KSP.html"><img src="!Trooper/KSP/!BADGE.png" height="300"><br>Kentucky State Police</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 		
 			<!-- <a href="KY/Game.html"> --><img src="KY/WBADGE.png" height="300"><br>Kentucky Fisk & Wildlife</a><br><br>
 		</div>
