--- a/USA/State/MO.html
+++ b/USA/State/MO.html
@@ -26,7 +26,7 @@
 			<a href="!Trooper/MOSHP.html"><img src="!Trooper/MOSHP/!BADGE.png" height="300"><br>Missouri State Highway Patrol</a><br><br>
 		</div>
 		
-		<div class="column2g">
+		<div class="column2">
 			<!-- <a href="MO/Game.html"> --><img src="MO/WBADGE.png" height="300"><br>Missouri State Highway Patrol</a><br><br>
 		</div>
 		
