--- a/USA/State/NV/LV.html
+++ b/USA/State/NV/LV.html
@@ -10,11 +10,11 @@
 
 	<div class="row">
 		 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="Clark/LV/LVMPD"> --><img src="Clark/LV/LVMPD/BADGE.png" height="300"><br>Las Vegas Metropolitan Police Department</a><br><br>
 		</div>
 		
-		<!-- <div class="columng">
+		<!-- <div class="column">
 			<a href="Clark/LV/Marhsall"><img src="Clark/LV/Marhsall/BADGE.png" height="300"><br>Las Vegas Marshall</a><br><br>
 		</div> -->
 	</div>
