--- a/USA/State/NY.html
+++ b/USA/State/NY.html
@@ -83,6 +83,7 @@
 						<img src="../Transit/Transit/MTA/BADGE.png" height="80">
 						<img src="../Transit/Transit/MTA/TBTA.png" height="80">
 						<img src="../Transit/Port/PAPD/BADGE.png" height="80">
+<!--Everything past here is stupid and unnecessary, but by that metric all the more worth including.-->
 						<img src="NY/NYC/More/DSNY.png" height="80">
 						<img src="NY/NYC/More/Environment.png" height="80">
 						<img src="NY/NYC/More/Parks.png" height="80">
