--- a/ROW/KR.html
+++ b/ROW/KR.html
@@ -17,40 +17,125 @@
 			<img src="KR/Fire.png" height="300"><br>소방청</br><i>(Korean National Fire Agency)</i></br>
 		</div>
 		<div class="column">
-			<img src="KR/CoastGuard.png" height="300"><br>해양경찰청</br><i>(Korea Coast Guard)</i></br>
+			<img src="KR/Defence/CoastGuard.png" height="300"><br>해양경찰청</br><i>(Korea Coast Guard)</i></br>
 		</div>
 	</div>
 	
+	<h2>Province-level cities</h2>
+	<!-- <h3>Special Metropolitan City</h3>// Seoul -->
+	<!-- <h3>Metropolitan City</h3> //Busan, Daegu, Incheon, Gwangju, Daejeon, Ulsan -->
+	<!-- <h3>Special Metropolitan City</h3>// Sejong -->
 	
 	<div class="row">
-		<div class="column">
+		<div class="column4">
 			<img src="KR/Seoul/LOGO.png" height="200"><br>서울특별시</br><i>(Seoul)</i></br>
 			<div class="column2">
-				<img src="KR/Seoul/Police.png" height="100"><br>소방청</br><i>(Seoul Metropolitan<br>Police Agency)</i></br>
+				<img src="KR/Seoul/Police.png" height="100"><br>서울특별시경찰청</br><i>(Seoul Metropolitan<br>Police Agency)</i></br>
 			</div>
 			<div class="column2">
 				<img src="KR/Seoul/Fire.png" height="100"><br>소방청</br><i>(Seoul Fire Services)</i></br>
 			</div>
 		</div>
-		<div class="column">
+		<div class="column4">
 			<img src="KR/Busan/LOGO.png" height="200"><br>부산광역시</br><i>(Busan)</i></br>
 			<div class="column2">
-				<img src="KR/Busan/Police.png" height="100"><br>소방청</br><i>(Busan Metropolitan<br>Police Agency)</i></br>
+				<img src="KR/Busan/Police.png" height="100"><br>부산광역시경찰청</br><i>(Busan Metropolitan<br>Police Agency)</i></br>
 			</div>
 			<div class="column2">
 				<img src="KR/Busan/Fire.png" height="100"><br>소방청</br><i>(Busan Fire Services)</i></br>
 			</div>
 		</div>
-		<div class="column">
+		<div class="column4">
 			<img src="KR/Incheon/LOGO.png" height="200"><br>인천광역시</br><i>(Incheon)</i></br>
 			<div class="column2">
-				<img src="KR/Incheon/Police.png" height="100"><br>소방청</br><i>(Incheon Metropolitan<br>Police Agency)</i></br>
+				<img src="KR/Incheon/Police.png" height="100"><br>인천광역시경찰청</br><i>(Incheon Metropolitan<br>Police Agency)</i></br>
 			</div>
 			<div class="column2">
 				<img src="KR/Incheon/Fire.png" height="100"><br>소방청</br><i>(Incheon Fire Services)</i></br>
 			</div>
 		</div>
+		<div class="column4">
+			<img src="KR/Daegu/LOGO.png" height="200"><br>인천광역시</br><i>(Daegu)</i></br>
+			<div class="column2">
+				<img src="KR/Daegu/Police.png" height="100"><br>대구광역시경찰청</br><i>(Daegu Metropolitan<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Daegu/Fire.png" height="100"><br>소방청</br><i>(Daegu Fire Services)</i></br>
+			</div>
+		</div>
 	</div>
 
+	<div class="row">
+		<div class="column4">
+			<img src="KR/Daejeon/LOGO.png" height="200"><br>서울특별시</br><i>(Daejeon)</i></br>
+			<div class="column2">
+				<img src="KR/Daejeon/Police.png" height="100"><br>대전광역시경찰청</br><i>(Daejeon Metropolitan<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Daejeon/Fire.png" height="100"><br>소방청</br><i>(Daejeon Fire Services)</i></br>
+			</div>
+		</div>
+		<div class="column4">
+			<img src="KR/Gwangju/LOGO.png" height="200"><br>부산광역시</br><i>(Gwangju)</i></br>
+			<div class="column2">
+				<img src="KR/Gwangju/Police.png" height="100"><br>광주광역시경찰청</br><i>(Gwangju Metropolitan<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Gwangju/Fire.png" height="100"><br>소방청</br><i>(Gwangju Fire Services)</i></br>
+			</div>
+		</div>
+		<div class="column4">
+			<img src="KR/Ulsan/LOGO.png" height="200"><br>인천광역시</br><i>(Ulsan)</i></br>
+			<div class="column2">
+				<img src="KR/Ulsan/Police.png" height="100"><br>울산광역시경찰청</br><i>(Ulsan Metropolitan<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Ulsan/Fire.png" height="100"><br>소방청</br><i>(Ulsan Fire Services)</i></br>
+			</div>
+		</div>
+		<div class="column4">
+			<img src="KR/Sejong/LOGO.png" height="200"><br>인천광역시</br><i>(Sejong)</i></br>
+			<div class="column2">
+				<img src="KR/Sejong/Police.png" height="100"><br>세종특별자치시경찰청</br><i>(Sejong Metropolitan<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Sejong/Fire.png" height="100"><br>소방청</br><i>(Sejong Fire Services)</i></br>
+			</div>
+		</div>
+	</div>
+	
+	<!-- <h3>Special Self-Governing Province</h3> //Jeju, Gangwon, Jeonbuk -->
+	<div class="row">
+		<div class="column">
+			<img src="KR/Jeju/LOGO.png" height="200"><br>제주특별자치도</br><i>(Jeju Province)</i></br>
+			<div class="column">
+				<img src="KR/Jeju/Police.png" height="100"><br>경찰청</br><i>(Jeju Provincial<br>Police Agency)</i></br>
+			</div>
+			<div class="column">
+				<img src="KR/Jeju/Fire.png" height="100"><br>소방청</br><i>(Jeju Fire Services)</i></br>
+			</div>
+			<div class="column">
+				<img src="KR/Jeju/MPolice.png" height="100"><br>경찰청</br><i>(Jeju Municipal<br>Police Agency)</i></br>
+			</div>
+		</div>
+		<div class="column">
+			<img src="KR/Gangwon/LOGO.png" height="200"><br>강원특별자치도</br><i>(Gangwon Province/State)</i></br>
+			<div class="column2">
+				<img src="KR/Gangwon/Police.png" height="100"><br>경찰청</br><i>(Gangwon Provincial<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Gangwon/Fire.png" height="100"><br>소방청</br><i>(Gangwon Fire Services)</i></br>
+			</div>
+		</div>
+		<div class="column">
+			<img src="KR/Jeonbuk/LOGO.png" height="200"><br>전북특별자치도</br><i>(Jeonbuk State)</i></br>
+			<div class="column2">
+				<img src="KR/Jeonbuk/Police.png" height="100"><br>경찰청</br><i>(Jeonbuk Provincial<br>Police Agency)</i></br>
+			</div>
+			<div class="column2">
+				<img src="KR/Jeonbuk/Fire.png" height="100"><br>소방청</br><i>(Jeonbuk Fire Services)</i></br>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
